[gd_scene load_steps=11 format=3 uid="uid://dg1bhsvig8d2h"]

[ext_resource type="Texture2D" uid="uid://cevfh1x7s03pg" path="res://assets/textures/speed_box.png" id="1_3thol"]
[ext_resource type="Script" path="res://scripts/speed_box.gd" id="2_4sqmh"]
[ext_resource type="Texture2D" uid="uid://2en6axttijar" path="res://assets/textures/pause_button.png" id="2_b3mbc"]
[ext_resource type="Texture2D" uid="uid://bux2mswtu78d6" path="res://assets/textures/activated_pause_button.png" id="3_wl673"]
[ext_resource type="Texture2D" uid="uid://brvtyhi4w212a" path="res://assets/textures/play_button.png" id="4_0osqo"]
[ext_resource type="Texture2D" uid="uid://6yu7fq1lxmun" path="res://assets/textures/activated_play_button.png" id="5_v5kca"]
[ext_resource type="Texture2D" uid="uid://dqiisutmj2j8l" path="res://assets/textures/speed_up_button.png" id="6_ot8ye"]
[ext_resource type="Texture2D" uid="uid://dp4qxqjvfc61l" path="res://assets/textures/activated_speed_up_button.png" id="7_gfsfq"]
[ext_resource type="Texture2D" uid="uid://q0lexa6but65" path="res://assets/textures/ultra_fast.png" id="9_7itvo"]
[ext_resource type="Texture2D" uid="uid://cdvix7tim08px" path="res://assets/textures/Activated_ultra_fast.png" id="10_0y7mi"]

[node name="speed_box" type="NinePatchRect"]
anchors_preset = -1
anchor_left = 0.543
anchor_right = 1.0
anchor_bottom = 0.205
offset_left = -306.56
offset_top = -264.0
offset_right = 326.0
offset_bottom = 294.6
texture = ExtResource("1_3thol")
patch_margin_left = 50
patch_margin_top = 15
patch_margin_right = 50
patch_margin_bottom = 15
script = ExtResource("2_4sqmh")

[node name="pause_bttn" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.288
anchor_top = 0.409
anchor_right = 0.377
anchor_bottom = 0.576
offset_left = 0.120026
offset_top = -0.0200195
offset_right = 45.73
offset_bottom = 43.72
scale = Vector2(0.75, 0.75)
toggle_mode = true
texture_normal = ExtResource("2_b3mbc")
texture_pressed = ExtResource("3_wl673")

[node name="play_bttn" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.399
anchor_top = 0.409
anchor_right = 0.485
anchor_bottom = 0.577
offset_left = -0.48999
offset_top = -0.0200195
offset_right = 43.65
offset_bottom = 43.94
scale = Vector2(0.75, 0.75)
toggle_mode = true
texture_normal = ExtResource("4_0osqo")
texture_pressed = ExtResource("5_v5kca")

[node name="speed_up_bttn" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.509
anchor_top = 0.412
anchor_right = 0.598
anchor_bottom = 0.574
offset_left = -0.589905
offset_top = -4.35999
offset_right = 45.0201
offset_bottom = 43.28
scale = Vector2(0.75, 0.75)
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("6_ot8ye")
texture_pressed = ExtResource("7_gfsfq")

[node name="super_speed_up_bttn" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.509
anchor_top = 0.412
anchor_right = 0.598
anchor_bottom = 0.574
offset_left = 162.41
offset_top = -4.35999
offset_right = 208.02
offset_bottom = 43.28
scale = Vector2(0.75, 0.75)
toggle_mode = true
texture_normal = ExtResource("9_7itvo")
texture_pressed = ExtResource("10_0y7mi")

[connection signal="toggled" from="pause_bttn" to="." method="_on_pause_bttn_toggled"]
[connection signal="toggled" from="play_bttn" to="." method="_on_play_bttn_toggled"]
[connection signal="toggled" from="speed_up_bttn" to="." method="_on_speed_up_bttn_toggled"]
[connection signal="toggled" from="super_speed_up_bttn" to="." method="_on_super_speed_up_bttn_toggled"]
